# DB_SOLAR_SIATA

./: README.md  pyproject.toml
notebooks/: clases.py  class_unir_df.py  unir_df.ipynb
notebooks/data/piedras_blancas_julio/: estacion_data_humedad_207__20240701_20240731.csv  estacion_data_precipitacion_207__20240701_20240731.csv  estacion_data_presion_207__20240701_20240731.csv  estacion_data_temperatura_207__20240701_20240731.csv  estacion_data_vientos_207__20240701_20240731.csv
notebooks/data/rionegro_julio/: estacion_data_humedad_199__20240701_20240731.csv  estacion_data_precipitacion_199__20240701_20240731.csv  estacion_data_presion_199__20240701_20240731.csv  estacion_data_vientos_199__20240701_20240731.csv
src/data/rionegro_julio/: estacion_data_temperatura_199__20240701_20240731.csv
